--- a/website/css/page.css
+++ b/website/css/page.css
@@ -1,7 +1,7 @@
 ﻿div.page h2 {
     margin-bottom: 35px;
     color: #2599a8;
-    text-align: center;
+    text-align: left;
 }
 div.profile .page p{
     margin-left: 15px;
