--- a/website/css/products.css
+++ b/website/css/products.css
@@ -98,9 +98,9 @@ div#container-products > div > div
     color: #666;
 }
 
-.item:hover > div:nth-child(2) > h2 
+.item:hover > div:nth-child(2) > h2, .active_product 
 {
-    color: rgb(37, 153, 168);
+    color: rgb(37, 153, 168) !important;
 }
 
 .item > div:nth-child(2) > p   
