--- a/website/masterpages/Home.master
+++ b/website/masterpages/Home.master
@@ -18,12 +18,12 @@
                 </div>
             </div>
         </div>
-        <div class="container">
+        <%-- <div class="container">
             <div class="row">
                 <umbraco:Macro Alias="CarrouselProfile" runat="server" />
 				<umbraco:Macro Alias="CarrouselClients" runat="server" />
-                <%--<umbraco:Macro Alias="CarrouselBlog" runat="server" />--%>
+                <umbraco:Macro Alias="CarrouselBlog" runat="server" />
             </div>
-        </div>
+        </div>--%>
     </div>
 </asp:Content>
