--- a/website/css/products.css
+++ b/website/css/products.css
@@ -117,8 +117,7 @@ div#container-categories {
     text-align: center;
     vertical-align: middle;
     border-bottom: 1px solid rgb(37, 153, 168);
-    height: 100px;
-    padding: 0 1em;
+    padding: 0 1em 2em 1em;
 }
 
 div#container-categories > div 
@@ -181,4 +180,10 @@ div.wrap-products {
     -webkit-border-radius: 8px;
     -moz-border-radius: 8px;
     border-radius: 8px;   
+}
+
+.desc-cate 
+{
+    display: none;
+    margin-top: 2em;
 }
