--- a/website/css/products.css
+++ b/website/css/products.css
@@ -128,6 +128,19 @@ div#container-categories > div
     text-align: left;
 }
 
+div#container-categories > div:hover > div:first-child 
+{
+    -moz-box-shadow: 0px 0px 20px #666666;
+  	-webkit-box-shadow: 0px 0px 20px #666666;
+  	box-shadow: 0px 0px 20px #666666;
+  	background: #2599A8 !important;
+}
+
+div#container-categories > div:hover > div:nth-child(2) 
+{
+    color: #2599A8 !important;
+}
+
 div#container-categories > div > div:first-child {
     display: inline-block;
     margin: 0em 0.5em 0 0.5em;
@@ -158,6 +171,10 @@ div#container-categories > div > div:nth-child(2)
     vertical-align: middle;
     display: inline-block;
     width: 73%;
+    -webkit-transition: color 0.5s linear;
+    -moz-transition: color 0.5s linear;
+    -o-transition: color 0.5s linear;
+    transition: color 0.5s linear;
 }
 
 div#container-categories > div > div:nth-child(2) > p
