--- a/website/macroScripts/Header.cshtml
+++ b/website/macroScripts/Header.cshtml
@@ -7,7 +7,7 @@
     </div>
 </div>
 <div class="col-sm-7">
-    <div class="toplinks">
+    <!--<div class="toplinks">
         @{
             DynamicNode rootNode = new DynamicNode(-1);
             DynamicNode contactNode = rootNode.Descendants("Page").Items.FirstOrDefault(x => x.GetPropertyValue("identifier") == "Contact");
@@ -18,5 +18,5 @@
             <p class="tel">
                 @Dictionary.TelephoneNumber</p>
         </div>
-    </div>
+    </div>-->
 </div>
