--- a/website/macroScripts/FooterMenu.cshtml
+++ b/website/macroScripts/FooterMenu.cshtml
@@ -1,7 +1,8 @@
 @using umbraco.MacroEngines
 @inherits umbraco.MacroEngines.DynamicNodeContext
 <p class="copyright">
-    &copy; 2013 Barcelona Travel Consulting</p>
+    @Html.Raw(@Dictionary["Copyright"])
+</p>
 <ul class="links">
     @{
         DynamicNode rootNode = new DynamicNode(-1);
